--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -35,7 +35,7 @@
   },
   "bundleDependencies": [],
   "private": false,
-  "main": "lib/bbop-widget-solr-autocomplete.js",
+  "main": "basic.js",
   "bugs": {
     "url": "https://github.com/berkeleybop/bbop-widget-solr-autocomplete/issues"
   },
