--- a/examples/angularjs/package.json
+++ b/examples/angularjs/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bbop-widget-solr-autocomplete",
-  "version": "0.0.9",
+  "name": "bbop-widget-solr-autocomplete-consumer",
+  "version": "0.0.1",
   "license": "BSD-2-Clause",
-  "description": "Autocomplete widget for Solr.",
+  "description": "Show case of the widet.",
   "keywords": [
     "node",
     "npm",
@@ -23,11 +23,7 @@
     "npm": ">= 2.7.4"
   },
   "dependencies": {
-    "jquery": "^2.1.4",
-    "jquery-ui": "^1.10.5",
-    "underscore": "^1.8.3",
-    "selectize": "^0.12.1",
-    "bbop": "^2.3.0"
+    "bbop-widget-solr-autocomplete": "latest"
   },
   "devDependencies": {
     "browserify": "^10.2.1",
@@ -35,11 +31,13 @@
     "gulp": "^3.8.11",
     "gulp-jsdoc": "^0.1.4",
     "gulp-rename": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "angular": "1.3.15",
+    "angular-route": "1.3.15"
   },
   "bundleDependencies": [],
   "private": false,
-  "main": "lib/bbop-widget-solr-autocomplete.js",
+  "main": "basic.js",
   "bugs": {
     "url": "https://github.com/berkeleybop/bbop-widget-solr-autocomplete/issues"
   },
